--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        cache-dependency-path: 'package-lock.json'
+    - name: Install dependencies
+      working-directory: .
+      run: npm ci
+    - name: Build application
+      working-directory: .
+      run: npm run build --if-present
+    - name: Lint code
+      working-directory: .
+      run: npm run lint
