build : fix the workflow to work on every branch

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]  # Run on all branches
   pull_request:
-    branches: [ "main" ]
+    branches: [ "*" ]  # Run on PRs to all branches
 
 jobs:
   build:
